<resources>
    <string name="app_name">RemoteControl</string>
    <string name="rewind">Rewind</string>
    <string name="space">Space</string>
    <string name="forward">Forward</string>
    <string name="servers_ip">Server\'s IP address</string>
    <string name="last_used">Last used</string>
    <string name="next">Next</string>
    <string name="port">Port</string>
    <string name="port_8080">8080</string>
    <string name="title_keyboard">Keyboard</string>
    <string name="title_mouse">Mouse</string>
    <string name="left_x2">Left x2</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
</resources>
