<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".activity.MainActivity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:text="Server: http://192.168.0.249:8080"
              android:id="@+id/tvServerAddress"
              android:gravity="center"
              android:layout_margin="4dp"/>

    <LinearLayout
            android:layout_below="@id/tvServerAddress"
            android:id="@+id/llControl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/btnRewind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_rewind"
                android:contentDescription="@string/rewind"/>

        <ImageButton
                android:id="@+id/btnSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_space"
                android:layout_weight="2"
                android:contentDescription="@string/space"/>

        <ImageButton
                android:id="@+id/btnForward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_forward"
                android:layout_weight="1"
                android:contentDescription="@string/forward"/>
    </LinearLayout>

    <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_below="@id/llControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
</RelativeLayout>